# sglang

docs_new/cookbook/autoregressive/DeepSeek/: DeepSeek-V4.mdx
python/: pyproject.toml
python/sglang/srt/: utils.py
python/sglang/srt/disaggregation/: decode.py  prefill.py
python/sglang/srt/managers/: scheduler.py  scheduler_input_blocker.py
sgl-router/: Cargo.toml
sgl-router/py_src/sglang_router/: launch_router.py
sgl-router/src/: logging.rs  main.rs
sgl-router/src/core/: worker.rs
sgl-router/src/policies/: cache_aware.rs  round_robin.rs
sgl-router/src/routers/: router.rs
